--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     
     <header class="page-header">
       <h1 class="page-title">naissance</h1>
-      <p class="page-subtitle">a literary magazine</p>
+      <p class="page-subtitle">a literary magazine by African Leadership University</p>
     </header>
 
     <!-- ISSUES SECTION -->
@@ -26,8 +26,8 @@
             </div>
           </a>
           <div class="issue-info">
-            <h3><a href="issue.html">issue one: emergence</a></h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vel ante vitae urna facilisis tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae. In our inaugural issue, we gather voices that speak to beginnings—stories of first light, of becoming, of the tender violence of birth.</p>
+            <h3><a href="issue.html">issue one: as it was in the beginning</a></h3>
+            <p>When we are tempted to look within any beginning, what do we find? What emotions follow tales we hear and the places we find ourselves? Our inaugural issue, students in ALU explore the feeling of finding themselves at various starts and places.</p>
             <a href="issue.html">read the full issue →</a>
           </div>
         </div>
@@ -38,9 +38,9 @@
     <section class="section" id="about">
       <h2 class="section-title">about us</h2>
       <div class="section-content">
-        <p>naissance—from the French word meaning birth or origin—is a literary magazine dedicated to publishing fiction, poetry, and creative nonfiction that captures moments of transformation. We believe in the power of language to illuminate the spaces between what was and what is becoming.</p>
-        <p>Founded in 2024, we emerged from a simple conviction: that there are stories waiting in the margins, voices humming beneath the static, narratives that deserve a place to unfold. We are particularly interested in work that challenges conventional forms, that sits comfortably in discomfort, that asks questions it cannot answer.</p>
-        <p>We publish quarterly, each issue organized around a loose thematic thread. We pay our contributors, because we believe art is labor and labor deserves compensation. We are committed to amplifying emerging voices alongside established ones, believing that the conversation between generations enriches us all.</p>
+        <p>naissance, cribbed from the French word meaning birth or origin, is the fufillment of African Leadership University's dedication to storytelling. That is: fiction, poetry, creative nonfiction, plays, film, and anything else that is strange, bizarre, and overflowing from within creative African minds. The future of African creativity is in the power of language. With it, we can illuminate the spaces between what has always been and what will always be.</p>
+        <p>Founded in 2025, we are most interested in brilliant language, bent this way and that in the name of form. We are on the lookout for stories that feel like dreams, hallucinations, or memories..</p>
+        <p>We aim to publish quarterly. Each issue will be organised around a loose theme. We are not a paying market yet, but </p>
       </div>
     </section>
 
@@ -49,12 +49,9 @@
       <h2 class="section-title">masthead</h2>
       <div class="section-content">
         <ul class="masthead-list">
-          <li><a href="#">elena morrow</a> <span class="masthead-role">editor-in-chief</span></li>
-          <li><a href="#">david okonkwo</a> <span class="masthead-role">fiction editor</span></li>
-          <li><a href="#">sarah kim</a> <span class="masthead-role">poetry editor</span></li>
-          <li><a href="#">marcus bell</a> <span class="masthead-role">nonfiction editor</span></li>
-          <li><a href="#">ana reyes</a> <span class="masthead-role">art director</span></li>
-          <li><a href="#">jamie chen</a> <span class="masthead-role">web & design</span></li>
+          <li><a href="#">jesutomisin ipinmoye/a> <span class="masthead-role">editor</span></li>
+          <li><a href="#">monique coombes</a> <span class="masthead-role">editor</span></li>
+          <li><a href="#">gabrielle emem harry</a> <span class="masthead-role">editor</span></li>
         </ul>
       </div>
     </section>
@@ -63,11 +60,11 @@
     <section class="section" id="submissions">
       <h2 class="section-title">submissions</h2>
       <div class="section-content">
-        <p>We read year-round and respond within three months. We accept previously unpublished work only. Simultaneous submissions are welcome—please withdraw promptly if your work is accepted elsewhere.</p>
-        <p><strong>fiction:</strong> up to 7,000 words. we're drawn to stories that trust the reader, that leave room for ambiguity, that find the strange in the familiar.</p>
-        <p><strong>poetry:</strong> up to five poems per submission. we admire precision, music, and images that linger. send us your weird ones, your quiet ones, your unresolved ones.</p>
-        <p><strong>creative nonfiction:</strong> up to 5,000 words. essays, memoir, hybrid forms. we want truth that reads like invention.</p>
-        <p>We pay $100 for fiction, $50 per poem, and $75 for nonfiction. Submit via our <a href="#">Submittable portal</a>.</p>
+        <p>We are currently only accept submissions from ALU Students, Staff, and Alumni. However, we plan to open to the wider literary world once we've gotten a rhythm going :) We read year-round and respond within three months. We accept previously unpublished work only. Simultaneous submissions are welcome, but please withdraw promptly if your work is accepted elsewhere.</p>
+        <p><strong>fiction:</strong> up to 15,000 words. we love strong sentences, strange plots, and prose that lifts off the page.</p>
+        <p><strong>poetry:</strong> up to three poems per submission. we want poetry that feels rife with feeling.</p>
+        <p><strong>creative nonfiction:</strong> up to 5,000 words: essays, memoir, hybrid forms. we want essays that shatter the personal and use the shards as glinting lenses.</p>
+        <p>Submit by sending us an email! Attach your submission, with a cover letter in the body. Please follow the Shunn Manuscript Format.</p>
       </div>
     </section>
 
@@ -76,9 +73,9 @@
       <h2 class="section-title">contact us</h2>
       <div class="section-content">
         <p>For general inquiries, please reach out to:</p>
-        <p class="contact-email"><a href="mailto:hello@naissance.mag">hello@naissance.mag</a></p>
-        <p>For submission-related questions, please use our Submittable portal or contact:</p>
-        <p class="contact-email"><a href="mailto:submissions@naissance.mag">submissions@naissance.mag</a></p>
+        <p class="contact-email"><a href="mailto:thewritingcentre@alueducation.com">thewritingcentre@alueducation.com</a></p>
+        <p>For submission-related questions or submissions, please mail:</p>
+        <p class="contact-email"><a href="mailto:jipinmoye@alueducation.com">jipinmoye@alueducation.com</a></p>
       </div>
     </section>
 
