--- a/issue.html
+++ b/issue.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>issue one: emergence — naissance</title>
+  <title>issue one: as it was in the beginning — naissance</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="issue-page">
@@ -15,7 +15,7 @@
   <!-- Issue Header -->
   <header class="issue-header">
     <p class="issue-number">issue one</p>
-    <h1 class="issue-name">emergence</h1>
+    <h1 class="issue-name">as it was in the beginning</h1>
     <p class="issue-description">stories of beginnings, of becoming, of the tender violence of birth</p>
   </header>
 
