--- a/issue.html
+++ b/issue.html
@@ -16,7 +16,7 @@
   <header class="issue-header">
     <p class="issue-number">issue one</p>
     <h1 class="issue-name">as it was in the beginning</h1>
-    <p class="issue-description">stories of beginnings, of becoming, of the tender violence of birth</p>
+    <p class="issue-description">stories and poetry about beginnings and endings</p>
   </header>
 
   <!-- Stories Container -->
