--- a/contributors.html
+++ b/contributors.html
@@ -22,7 +22,7 @@
           <div class="contributor-photo placeholder-img" style="width: 150px; height: 150px; border-radius: 50%;">
             photo
           </div>
-          <h3 class="contributor-name">amara obi</h3>
+          <h3 class="contributor-name">tejasvini pudaruth</h3>
           <p class="contributor-bio">Amara Obi is a Nigerian-American writer based in Brooklyn. Her work has appeared in The Paris Review, Granta, and One Story. She is currently working on her first novel about memory and migration.</p>
         </article>
 
@@ -30,15 +30,15 @@
           <div class="contributor-photo placeholder-img" style="width: 150px; height: 150px; border-radius: 50%;">
             photo
           </div>
-          <h3 class="contributor-name">james whitfield</h3>
-          <p class="contributor-bio">James Whitfield lives in Portland, Oregon, where he teaches creative writing at Portland State. His poetry collection, "Small Hours," was a finalist for the National Book Award.</p>
+          <h3 class="contributor-name">victor onchuru</h3>
+          <p class="contributor-bio">Victor Onchuru is a contemporary poetic artist and elocutionist whose work sits at the crossroads of social change, culture, and creative expression. With a passion for art, design, and the vibrancy of Kenyan heritage, he champions education by engaging young people through poetry and performance -- cultivating a new wave of versatile verse-makers who value the power and impact of spoken word. A seasoned poetry adjudicator and devoted preserver of the Swahili language, Victor brings over seven years of experience in composition, training, and performance at the Kenya National Music Festivals, using his craft to shape voices, stories, and the evolving landscape of modern African art.</p>
         </article>
 
         <article class="contributor-card">
           <div class="contributor-photo placeholder-img" style="width: 150px; height: 150px; border-radius: 50%;">
             photo
           </div>
-          <h3 class="contributor-name">mei-ling chang</h3>
+          <h3 class="contributor-name">halimatu sadia mohammed</h3>
           <p class="contributor-bio">Mei-Ling Chang is a Taiwanese writer and translator. Her essays explore diaspora, language, and the body. She holds an MFA from the University of Michigan.</p>
         </article>
 
@@ -46,7 +46,7 @@
           <div class="contributor-photo placeholder-img" style="width: 150px; height: 150px; border-radius: 50%;">
             photo
           </div>
-          <h3 class="contributor-name">carlos mendez</h3>
+          <h3 class="contributor-name">gusenga zirikana</h3>
           <p class="contributor-bio">Carlos Mendez was born in Bogotá and raised in Miami. His short stories have appeared in McSweeney's and ZYZZYVA. He works as a carpenter when he's not writing.</p>
         </article>
 
@@ -54,16 +54,8 @@
           <div class="contributor-photo placeholder-img" style="width: 150px; height: 150px; border-radius: 50%;">
             photo
           </div>
-          <h3 class="contributor-name">fatima hassan</h3>
+          <h3 class="contributor-name">michelle ndumi musili</h3>
           <p class="contributor-bio">Fatima Hassan is a poet and visual artist from Nairobi. Her work interrogates borders, both literal and metaphorical. She is a Cave Canem fellow.</p>
-        </article>
-
-        <article class="contributor-card">
-          <div class="contributor-photo placeholder-img" style="width: 150px; height: 150px; border-radius: 50%;">
-            photo
-          </div>
-          <h3 class="contributor-name">ben kaufman</h3>
-          <p class="contributor-bio">Ben Kaufman writes fiction and criticism from Chicago. His work often examines the intersections of technology and intimacy. He is allergic to cats but owns two.</p>
         </article>
 
       </div>
