--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
       <h2 class="section-title">masthead</h2>
       <div class="section-content">
         <ul class="masthead-list">
-          <li><a href="#">jesutomisin ipinmoye/a> <span class="masthead-role">editor</span></li>
+          <li><a href="#">jesutomisin ipinmoye</a> <span class="masthead-role">editor</span></li>
           <li><a href="#">monique coombes</a> <span class="masthead-role">editor</span></li>
           <li><a href="#">gabrielle emem harry</a> <span class="masthead-role">editor</span></li>
         </ul>
