--- a/about.html
+++ b/about.html
@@ -76,6 +76,8 @@
         <p class="contact-email"><a href="mailto:thewritingcentre@alueducation.com">thewritingcentre@alueducation.com</a></p>
         <p>For submission-related questions or submissions, please mail:</p>
         <p class="contact-email"><a href="mailto:jipinmoye@alueducation.com">jipinmoye@alueducation.com</a></p>
+        <p>For more work by naissance, please visit our substack:</p>
+        <p class="contact-email"><a href="https://substack.com/@naissance?r=1r984f&utm_medium=ios&utm_source=profile">naissance on substack</a></p>
       </div>
     </section>
 
