--- a/contributors.html
+++ b/contributors.html
@@ -23,7 +23,7 @@
             photo
           </div>
           <h3 class="contributor-name">tejasvini pudaruth</h3>
-          <p class="contributor-bio">Amara Obi is a Nigerian-American writer based in Brooklyn. Her work has appeared in The Paris Review, Granta, and One Story. She is currently working on her first novel about memory and migration.</p>
+          <p class="contributor-bio">Tejasvini D.P. enjoys writing fantasy and has a natural love for poetic, atmospheric storytelling. They’re drawn to imaginative worlds, vivid imagery, and characters shaped by legend and wonder. Writing is their way of exploring the magic hidden in stories and the emotions that linger between the lines.</p>
         </article>
 
         <article class="contributor-card">
@@ -39,7 +39,7 @@
             photo
           </div>
           <h3 class="contributor-name">halimatu sadia mohammed</h3>
-          <p class="contributor-bio">Mei-Ling Chang is a Taiwanese writer and translator. Her essays explore diaspora, language, and the body. She holds an MFA from the University of Michigan.</p>
+          <p class="contributor-bio">Halimatu Sadia Mohammed is a student writer and emerging voice passionate about telling stories that blend both personal truth with broader social realities. She draws inspiration from everyday encounters, exploring themes of resilience, identity, and the quiet strength found in difficult places. When she’s not writing, she enjoys learning new skills, reflecting on life’s complexities, and finding meaning in conversations that challenge her perspective.</p>
         </article>
 
         <article class="contributor-card">
