--- a/contributors.html
+++ b/contributors.html
@@ -41,7 +41,7 @@
             photo
           </div>
           <h3 class="contributor-name">gusenga zirikana</h3>
-          <p class="contributor-bio">Carlos Mendez was born in Bogotá and raised in Miami. His short stories have appeared in McSweeney's and ZYZZYVA. He works as a carpenter when he's not writing.</p>
+          <p class="contributor-bio">Gusenga Zirikana is...</p>
         </article>
 
         <article class="contributor-card">
@@ -49,7 +49,7 @@
             photo
           </div>
           <h3 class="contributor-name">michelle ndumi musili</h3>
-          <p class="contributor-bio">Fatima Hassan is a poet and visual artist from Nairobi. Her work interrogates borders, both literal and metaphorical. She is a Cave Canem fellow.</p>
+          <p class="contributor-bio">Michelle Ndumi Musili is...</p>
         </article>
 
       </div>
