--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <main class="landing">
-    <h1 class="landing-title">naissance</h1>
+    <img src="images/assets/alulogo.png" alt="ALU" class="landing-logo">
+    <h1 class="landing-title">
+      <span class="nai">nai</span><span class="ssance">ssance</span><span class="exclaim">!</span>
+    </h1>
     <nav class="landing-nav">
       <a href="issue.html">read issue one</a>
       <a href="about.html">visit the rest of the site</a>
