--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <main class="landing">
-    <img src="images/assets/alulogo.png" alt="ALU" class="landing-logo">
+    <img src="images/assets/alulogo.png" alt="ALU" class="site-logo">
     <h1 class="landing-title">
       <span class="nai">nai</span><span class="ssance">ssance</span><span class="exclaim">!</span>
     </h1>
