--- a/about.html
+++ b/about.html
@@ -7,12 +7,13 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <img src="images/assets/alulogo.png" alt="ALU" class="site-logo">
   <main class="page">
     <a href="index.html" class="back-link">home</a>
     
     <header class="page-header">
       <h1 class="page-title">naissance</h1>
-      <p class="page-subtitle">a literary magazine by African Leadership University</p>
+      <p class="page-subtitle">a literary magazine</p>
     </header>
 
     <!-- ISSUES SECTION -->
