--- a/contributors.html
+++ b/contributors.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <img src="images/assets/alulogo.png" alt="ALU" class="site-logo">
   <main class="page">
     <a href="index.html" class="back-link">home</a>
     
