--- a/issue.html
+++ b/issue.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>issue one: as it was in the beginning — naissance</title>
+  <title>issue one: emergence — naissance</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="issue-page">
+  <img src="images/assets/alulogo.png" alt="ALU" class="site-logo">
   <!-- Back link -->
   <div style="padding: 2rem; max-width: 1200px; margin: 0 auto;">
     <a href="index.html" class="back-link">home</a>
