--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
       <div class="section-content">
         <div class="issue-card">
           <a href="issue.html">
-            <div class="issue-cover placeholder-img" style="width: 200px; height: 280px;">
+            <img src="images/assets/issueonecover.png" alt="issue one cover" class="issue-card">
               issue one cover
             </div>
           </a>
@@ -41,7 +41,7 @@
       <div class="section-content">
         <p>naissance, cribbed from the French word meaning birth or origin, is the fufillment of African Leadership University's dedication to storytelling. That is: fiction, poetry, creative nonfiction, plays, film, and anything else that is strange, bizarre, and overflowing from within creative African minds. The future of African creativity is in the power of language. With it, we can illuminate the spaces between what has always been and what will always be.</p>
         <p>Founded in 2025, we are most interested in brilliant language, bent this way and that in the name of form. We are on the lookout for stories that feel like dreams, hallucinations, or memories..</p>
-        <p>We aim to publish quarterly. Each issue will be organised around a loose theme. We are not a paying market yet, but </p>
+        <p>We aim to publish quarterly. Each issue will be organised around a loose theme. We are not a paying market yet, but we find and support contributing writers to the best of our ability.</p>
       </div>
     </section>
 
