--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
       <div class="section-content">
         <div class="issue-card">
           <a href="issue.html">
-            <img src="images/assets/issueonecover.png" alt="issue one cover" class="issue-card">
+            <img src="images/assets/issueonecover.png" alt="issue one cover" class="issue-cover">
               issue one cover
             </div>
           </a>
