--- a/about.html
+++ b/about.html
@@ -49,9 +49,9 @@
       <h2 class="section-title">masthead</h2>
       <div class="section-content">
         <ul class="masthead-list">
-          <li><a href="#">jesutomisin ipinmoye</a> <span class="masthead-role">editor</span></li>
-          <li><a href="#">monique coombes</a> <span class="masthead-role">editor</span></li>
-          <li><a href="#">gabrielle emem harry</a> <span class="masthead-role">editor</span></li>
+          <li><a href="https://jesutomisin.com">jesutomisin ipinmoye</a> <span class="masthead-role">editor</span></li>
+          <li><a href="https://www.linkedin.com/in/monique-coombes-6376aa43?">monique coombes</a> <span class="masthead-role">editor</span></li>
+          <li><a href="https://www.linkedin.com/in/gabrielle-emem-harry-291551219?">gabrielle emem harry</a> <span class="masthead-role">editor</span></li>
         </ul>
       </div>
     </section>
