--- a/contributors.html
+++ b/contributors.html
@@ -42,7 +42,7 @@
             photo
           </div>
           <h3 class="contributor-name">gusenga zirikana</h3>
-          <p class="contributor-bio">Gusenga Zirikana is...</p>
+          <p class="contributor-bio">Gusenga Zirikana is a poet who writes to capture real emotions and unspoken feelings, with the aim of touching hearts and inspiring change. His work explores life, struggle, love, and hope, and at times reflects his faith and God’s word.</p>
         </article>
 
         <article class="contributor-card">
