--- a/contributors.html
+++ b/contributors.html
@@ -38,9 +38,7 @@
         </article>
 
         <article class="contributor-card">
-          <div class="contributor-photo placeholder-img" style="width: 150px; height: 150px; border-radius: 50%;">
-            photo
-          </div>
+          <img src="images/contributors/zirkana.png" alt="zirikana" class="contributor-photo">
           <h3 class="contributor-name">gusenga zirikana</h3>
           <p class="contributor-bio">Gusenga Zirikana is a poet who writes to capture real emotions and unspoken feelings, with the aim of touching hearts and inspiring change. His work explores life, struggle, love, and hope, and at times reflects his faith and God’s word.</p>
         </article>
