--- a/contributors.html
+++ b/contributors.html
@@ -44,11 +44,9 @@
         </article>
 
         <article class="contributor-card">
-          <div class="contributor-photo placeholder-img" style="width: 150px; height: 150px; border-radius: 50%;">
-            photo
-          </div>
+          <img src="images/contributors/musili.jpg" alt="musilli" class="contributor-photo">
           <h3 class="contributor-name">michelle ndumi musili</h3>
-          <p class="contributor-bio">Michelle Ndumi Musili is...</p>
+          <p class="contributor-bio">Michelle Ndumi Musili is a writer from Kenya who enjoys writing stories that delve into what it means to be a person, and what it means to love and be loved by someone. She is the founder of Libations, a magazine that centers and platforms Kenyan art and culture. She is passionate about African literature and about making sure as many Africans as possible get their voices out there. She’s still figuring out where all this takes her, but for now, she’s just committed to telling honest silly stories and never putting that engineering degree to use.</p>
         </article>
 
       </div>
